Simplify decoding URL parts